Update Dockerfile to add a jlinked jre. This reduces the size of the image from 374MB down to 116MB. Bump up VERSION to 0.6.3-rc2 for docker analysis updates.